update filters
